Simplify installation process with apt

--- a/script/install
+++ b/script/install
@@ -15,12 +15,12 @@ if [[ $(uname) = "Darwin" ]]; then
 # # Ubuntu/Debian
 elif [[ $(uname) = "Linux" ]]; then
     echo "› Running apt-get"
-    sudo apt-get install exuberant-ctags
-    sudo apt-get install zsh
-    sudo apt-get install xautolock
-    sudo apt-get install i3
-    sudo apt-get install ranger
-    sudo apt-get install ncdu
+    sudo apt-get -y install exuberant-ctags
+    sudo apt-get -y install zsh
+    sudo apt-get -y install xautolock
+    sudo apt-get -y install i3
+    sudo apt-get -y install ranger
+    sudo apt-get -y install ncdu
 fi
 
 # find the installers and run them iteratively
